--- a/problemSets/PS/PS3/PS3.tex
+++ b/problemSets/PS/PS3/PS3.tex
@@ -89,7 +89,7 @@
 \noindent \textsc{University of Geneva}     \hfill \textsc{Bachelor in Economics and Management} \\
 \textbf{Probability 1}                      \hfill \textsc{Bachelor in International Relations} \\
 Dr. Daniel \textsc{Flores Agreda}                 \hfill Spring 2021  \\
-ASSIGNMENT 03                               \hfill   March 13th
+ASSIGNMENT 03
 
 
 
