--- a/problemSets/PS/PS5/PS5_corrections.Rnw
+++ b/problemSets/PS/PS5/PS5_corrections.Rnw
@@ -44,7 +44,7 @@
 \noindent \textsc{University of Geneva}     \hfill \textsc{Bachelor in Economics and Management} \\
 \textbf{Probability 1}                      \hfill \textsc{Bachelor in International Relations} \\
 Dr. Daniel \textsc{Flores Agreda}                 \hfill Spring 2021  \\
-ASSIGNMENT 05                               \hfill   March 27th
+ASSIGNMENT 05
 
 
 
